[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Entities/SoccerBall/SoccerBall.gd" type="Script" id=1]
[ext_resource path="res://Assets/Soccer/BallTextures/balldimpled.png" type="Texture" id=2]

[sub_resource type="SphereShape" id=4]

[sub_resource type="SphereShape" id=1]

[sub_resource type="SphereMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 2 )

[node name="SoccerBall" type="KinematicBody" groups=["Ball"]]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )
collision_layer = 16
collision_mask = 37
script = ExtResource( 1 )

[node name="CollisionArea" type="Area" parent="."]
collision_layer = 16
collision_mask = 37

[node name="CollisionShape" type="CollisionShape" parent="CollisionArea"]
shape = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
